tests/machine/x/c/map_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_assign.c:35:9: error: ‘ScoresItem’ has no member named ‘data’
   35 |   scores.data["bob"] = 2;
      |         ^
/workspace/mochi/tests/machine/x/c/map_assign.c:36:24: error: ‘ScoresItem’ has no member named ‘data’
   36 |   printf("%d\n", scores.data["bob"]);
      |                        ^

   1: #include <stdio.h>
